src/pages/chart/chart.scss
@use 'components/shared/styles/mixins' as *;

.bot {
    &__chart-container {
        position: relative;
        top: 0;

        &-wrapper {
            position: absolute;
            top: 0;
            width: 100vw;
            background-color: var(--general-main-1);
        }
    }

    .ciq-chart {
        .cq-top-ui-widgets,
        & .info-box {
            transition: transform 0.25s ease;

            .cq-symbols-display {
                z-index: 1;

                &.ciq-disabled {
                    display: none;
                }

                @include mobile-screen {
                    width: auto;
                    padding: 10px;

                    .cq-menu-btn {
                        padding: 0.2rem;
                    }

                    .cq-symbol-select-btn {
                        margin: 0.2rem;

                        .cq-symbol-dropdown {
                            transform: scale(1);
                            margin-left: auto;
                        }

                        .cq-symbol {
                            font-size: 1.4rem;
                        }
                    }
                }
            }
        }

        .cq-top-ui-widgets {
            align-items: center;
            display: flex;
            flex-wrap: wrap;
            position: absolute;
            top: 0;
            width: 100%;
        }

        .sc-toolbar-widget {
            transition: transform 0.25s ease;

            @include mobile-screen {
                background: transparent;
                border-width: 0;
                bottom: calc(12rem + env(safe-area-inset-bottom, 0));

                /* Default bottom position for all browsers */

                .sc-chart-mode,
                .sc-studies {
                    background: var(--general-section-1);
                    padding: 0.4rem 0.2rem;
                    width: 4rem;
                    height: 4rem;
                    border-radius: 50%;
                    margin: 0.8rem;
                    opacity: 0.75;

                    @include flex-center;

                    &__menu {
                        &__timeperiod {
                            top: 0.8rem;
                            left: 0.8rem;
                        }

                        & > .ic-icon {
                            top: 0.6rem;
                        }
                    }
                }
            }

            .app-contents .ciq-menu {
                margin: 0;
            }
        }
    }

    .smartcharts-mobile {
        .cq-context {
            z-index: 99;

            .sc-mcd__category:last-child {
                margin-bottom: 3rem !important;
            }
        }

        & .cq-chart-title .cq-menu-dropdown {
            position: fixed !important;
            height: 100% !important;
            width: 100% !important;
            top: 0 !important;
            left: 0 !important;
            right: 0 !important;
            bottom: 0 !important;
            z-index: 99999 !important;
            transform: translateZ(0) !important;
            backface-visibility: hidden !important;
            will-change: transform !important;

            .sc-dialog {
                height: 100% !important;

                &__body {
                    height: inherit !important;

                    .sc-mcd {
                        height: inherit !important;
                        min-width: auto !important;
                    }

                    .title-text {
                        font-size: 1.6rem;
                    }
                }
            }
        }

        .sc-mcd__item {
            padding-left: 10px !important;
        }

        .sc-mcd__category__content .subcategory {
            padding-left: 10px !important;
        }
    }
}

// Safari-specific fixes
.dashboard__chart-wrapper--safari {
    .smartcharts-mobile {
        .cq-context {
            .sc-mcd__category:last-child {
                padding-bottom: 200px !important;
            }
        }

        & .cq-chart-title .cq-menu-dropdown {
            position: absolute !important;
            height: 100vh !important;
            width: 100vw !important;
            left: -10px !important;
            padding-bottom: 200px;
        }
    }
}

.cq-modal-dropdown.stxMenuActive {
    left: 0;
    top: 0;
}

